--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01" style="margin-bottom: 50px;">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -203,9 +203,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class='bx bxl-apple'></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg"><i class='bx bxl-play-store'></i> Download</button>
 
   </section>
 
@@ -213,7 +213,12 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <div>
+      <i class='bx bxl-twitter footer-icons'></i>
+    <i class='bx bxl-facebook footer-icons' ></i>
+    <i class='bx bxl-instagram footer-icons' ></i>
+    <i class='bx bxs-envelope footer-icons' ></i>
+    </div>
     <p>© Copyright TinDog</p>
 
   </footer>
