--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="coloured-section" id="title">
 
     <div class="container-fluid">
 
@@ -64,7 +64,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class='bx bxl-apple'></i>
             Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class='bx bxl-play-store'></i>
@@ -81,23 +81,23 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="row">
       <div class="col-lg-4 feature-box">
         <i class='icon bx bxs-check-circle bx-lg'></i>
-        <h3>Easy to use.</h3>
+        <h3 class="feature-title">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
 
       <div class="col-lg-4 feature-box">
         <i class='icon bx bxs-bullseye bx-lg'></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="feature-title">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
 
       <div class="col-lg-4 feature-box">
         <i class='icon bx bxs-heart bx-lg'></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="feature-title">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
 
@@ -107,12 +107,13 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="coloured-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+            TinDog. Woof.</h2>
           <img class="testimonials-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
@@ -135,7 +136,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="coloured-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -146,64 +147,64 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-              <div class="card-header">
-                  <h3>Chihuahua</h3>
-              </div>
-              <div class="card-body d-grid">
-                  <h2>Free</h2>
-                  <p>5 Matches Per Day</p>
-                  <p>10 Messages Per Day</p>
-                  <p>Unlimited App Usage</p>
-                  <button class="btn btn-outline-dark btn-lg" type="button">Sign Up</button>
-              </div>
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
           </div>
+          <div class="card-body d-grid">
+            <h2 class="price-text">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-outline-dark btn-lg" type="button">Sign Up</button>
+          </div>
+        </div>
       </div>
       <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-              <div class="card-header">
-                  <h3>Labrador</h3>
-              </div>
-              <div class="card-body d-grid">
-                  <h2>$49 / mo</h2>
-                  <p>Unlimited Matches</p>
-                  <p>Unlimited Messages</p>
-                  <p>Unlimited App Usage</p>
-                  <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
-              </div>
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
           </div>
+          <div class="card-body d-grid">
+            <h2 class="price-text">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+          </div>
+        </div>
       </div>
       <div class="pricing-column col-lg-4">
-          <div class="card">
-              <div class="card-header">
-                  <h3>Mastiff</h3>
-              </div>
-              <div class="card-body d-grid">
-                  <h2>$99 / mo</h2>
-                  <p>Pirority Listing</p>
-                  <p>Unlimited Matches</p>
-                  <p>Unlimited Messages</p>
-                  <p>Unlimited App Usage</p>
-                  <button class="btn btn-dark" type="button">Sign Up</button>
-              </div>
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
           </div>
+          <div class="card-body d-grid">
+            <h2 class="price-text">$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-dark" type="button">Sign Up</button>
+          </div>
+        </div>
       </div>
-  </div>
+    </div>
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="coloured-section" id="cta">
 
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button"><i class='bx bxl-apple'></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg"><i class='bx bxl-play-store'></i> Download</button>
 
@@ -212,12 +213,12 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div>
       <i class='bx bxl-twitter footer-icons'></i>
-    <i class='bx bxl-facebook footer-icons' ></i>
-    <i class='bx bxl-instagram footer-icons' ></i>
-    <i class='bx bxs-envelope footer-icons' ></i>
+      <i class='bx bxl-facebook footer-icons'></i>
+      <i class='bx bxl-instagram footer-icons'></i>
+      <i class='bx bxs-envelope footer-icons'></i>
     </div>
     <p>© Copyright TinDog</p>
 
